			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01n: *********************************

IMP/MAN (9/10/04, RK) Allow user to control number of items printed in the error diagnostics.

IMP/MAN (9/10/04, RK) Reworked the NCC commands. The operation is now selected by the NCC preferences pane while the number of windows is selected by the menu.

BUG: (9/10/04, SMR) Arraying arcs doesn't copy their constraining properties.
FIX: Array code calls "copyPropertiesFrom()".

IMP/MAN: (9/10/04, SMR) Added David Harris's ROM generator.

BUG: (9/9/4, SMR) Area-erase doesn't work in schematics.

IMP: (9/9/04, GVG) DRC Adding warning messages when zero width arcs are detected (covered or non-covered by other layers).

BUG: (9/9/04, RK) NCC Memory usage optimization. On small test case: LoCo fourMemories NCC uses 1/3 of the memory. Hierarchical comparison of LoCo is now 3x faster with these optimizations.

BUG: (9/9/04, SMR) Area-erase doesn't work in schematics.
FIX: Better choice of nodes to delete.

IMP: (9/9/04, SMR) HSpice output reader now handles binary files with bytes swapped.

BUG: (9/9/04, JKG) CIF output of "Boxes" could have center coords off minimum CIF grid, causing
     Boxes to shift when CIF was read back in.
FIX: If "Boxes" have center off-grid, they are written out as Polygons.

IMP: (9/9/04, GVG) Main: not attempt to read set of libraries if set is empty. Side effect: avoid unnecessary endBatch call

IMP: (9/9/04, GVG) ErrorLogger: For a given sortKey, sort messages lexicographically

IMP: (9/9/04, GVG) Clipboard: No DRC on hidden libraries.

BUG: (9/9/04, RK) NCC: bug fix for Tarik, Fix Hierarchical NCC from 2 windows

************************* Version 8.01m: *********************************

BUG: (9/9/04), GVG) ERC: Wrong detection of polygons with holes and therefore it complained about "areas too close"